[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cbfpy"
version = "0.0.1"
description = "Control Barrier Functions in Python"
authors = [{ name = "Daniel Morton", email = "danielpmorton@gmail.com" }]
readme = "README.md"
keywords = ["control", "barrier", "function", "CBF", "Jax"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2", # Pybullet has trouble with numpy 2.0
    "jax",
    "jaxlib",
    "qpax",
]

[project.urls]
Documentation = "https://danielpmorton.github.io/cbfpy/"
Repository = "https://github.com/danielpmorton/cbfpy/"

[project.optional-dependencies]
examples = [
    "pybullet",
    "pygame",
    # "gym_pybullet_drones @ git+https://github.com/danielpmorton/gym-pybullet-drones.git",
    "wheel",
    "matplotlib",
]
dev = ["mkdocs-material", "mkdocstrings[python]", "pylint", "black"]
all = [
    "pylint",
    "black",
    "pybullet",
    "pygame",
    # "gym_pybullet_drones @ git+https://github.com/danielpmorton/gym-pybullet-drones.git",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
exclude = ["artifacts", "images"]
